core/tests/snapshots/errors__fail_let_destructure_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat!\n(\"tests/errors/\", stringify! (fail_let_destructure_type_check), \".rain\"))"
---
<hidden>:6:12 main
<hidden>:10:9 x-inner
<hidden>:46:4 type_constraint_from_concrete-inner
<hidden>:11:3
| 	})
| 	if res.success {
| 		internal._throw(f"type error for ${res.value}, expected ${expected}")
  		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "type error for 6, expected Integer"
