core/tests/snapshots/errors__fail_let_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat!\n(\"tests/errors/\", stringify! (fail_let_type_check), \".rain\"))"
---
<hidden>:7:19
| let Integer = internal._get_type(0)
| 
| let x: Integer = "5"
                    ^ unrecoverable error: check error: type error: expected Integer, actual String
