core/tests/snapshots/errors__fail_union_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat!\n(\"tests/errors/\", stringify! (fail_union_type_check), \".rain\"))"
---
<hidden>:6:12 main
<hidden>:9:5
| 	x: Union([String, Integer]) = 6
| 	y: Union([String, Integer]) = "hi"
| 	z: Union([String, Integer]) = false
  	   ^^^^^^^^^^^^^^^^^^^^^^^^ unrecoverable error: type mismatch, expected [] actual Boolean
