core/tests/snapshots/errors__throw.snap
---
source: core/tests/errors.rs
expression: "run_error(concat! (\"tests/errors/\", stringify! (throw), \".rain\"))"
---
<hidden>:1:12 main
<hidden>:2:2
| let main = fn() {
| 	internal._throw("test")
  	^^^^^^^^^^^^^^^^^^^^^^^ "test"
